# cdemo

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JavaListener.cpp  JavaListener.h  JfCallJava.cpp  JfCallJava.h  JfFFmpeg.cpp  JfFFmpeg.h  WIAudio.cpp  WIAudio.h  WIPlayStatus.cpp  WIPlayStatus.h  WIPlayer.cpp  WIPlayer.h  WIPreparedListener.cpp  WIPreparedListener.h  WIQueue.cpp  WIQueue.h  android_log.h  dynamic-lib.cpp  extra.h  global.h  native-lib.cpp  sles.cpp  thread.cpp
app/src/main/java/com/example/cdemo/: FfgmegActivity.kt  JniUtils.kt  MainActivity.kt  Person.java  ThreadDemo.kt
app/src/main/java/com/example/cdemo/jf/: JfOnPreparedListener.kt  JfPlayer.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
